--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,16 @@
   "dependencies": {
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
+    "gapi-script": "^1.2.0",
     "lucide-react": "^0.453.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-big-calendar": "^1.15.0",
+    "react-calendar": "^5.1.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
