--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "gapi-script": "^1.2.0",
     "lucide-react": "^0.453.0",
     "moment": "^2.30.1",
+    "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-big-calendar": "^1.15.0",
@@ -23,7 +24,8 @@
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.27.0",
-    "recharts": "^2.13.3"
+    "recharts": "^2.13.3",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
