--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-calendar": "^5.1.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
+    "react-github-activity-feed": "^3.0.3",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.27.0",
     "recharts": "^2.13.3",
