--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,22 +15,22 @@
     "gapi-script": "^1.2.0",
     "lucide-react": "^0.453.0",
     "moment": "^2.30.1",
-    "quill": "^2.0.2",
     "query-string": "^9.1.1",
+    "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-big-calendar": "^1.15.0",
     "react-calendar": "^5.1.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
-    "react-github-activity-feed": "^3.0.3",
+    "react-hot-toast": "^2.4.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.27.0",
     "recharts": "^2.13.3",
-    "socket.io-client": "^4.8.1",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
