--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,8 +34,7 @@
     "socket.io-client": "^4.8.1",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.2",
-    "socket.io-client": "^4.8.1"
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
