--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "agora-rtc-react": "^2.3.0",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "dom-helpers": "^5.2.1",
@@ -30,11 +31,11 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "recharts": "^2.13.3",
-    "scheduler": "^0.23.2",
-    "socket.io-client": "^4.8.1",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "scheduler": "^0.23.2",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
