--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,47 @@
-django-cors-headers
-pylint_django
-google-generativeai
-python-dotenv
-channels
+annotated-types==0.7.0
+asgiref==3.8.1
+cffi==1.17.1
+channels==4.2.0
+charset-normalizer==3.4.0
+colorama==0.4.6
+cryptography==44.0.0
+defusedxml==0.8.0rc2
+Django==5.1.2
+django-cors-headers==4.6.0
+djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
+djoser==2.3.1
+google-ai-generativelanguage==0.6.10
+google-api-core==2.22.0
+google-api-python-client==2.151.0
+google-auth==2.35.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.3
+googleapis-common-protos==1.65.0
+grpcio==1.67.1
+grpcio-status==1.67.1
+httplib2==0.22.0
+idna==3.10
+oauthlib==3.2.2
+proto-plus==1.25.0
+protobuf==5.28.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pydantic==2.9.2
+pydantic_core==2.23.4
+PyJWT==2.10.1
+pyparsing==3.2.0
+python-dotenv==1.0.1
+python3-openid==3.2.0
+requests==2.32.3
+requests-oauthlib==2.0.0
+rsa==4.9
+social-auth-app-django==5.4.2
+social-auth-core==4.5.4
+sqlparse==0.5.1
+tqdm==4.66.6
+typing_extensions==4.12.2
+tzdata==2024.2
+uritemplate==4.1.1
+urllib3==2.2.3
